German translation + language detect/select added

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,6 +16,13 @@
     "proceed": "PROCEED"
   },
 
+  "select": {
+    "language": {
+      "english": "ENGLISH",
+      "german": "GERMAN"
+    }
+  },
+
   "texts": {
     "home": {
       "welcome": {
@@ -44,7 +51,19 @@
     },
     "projects": {
       "headline": "My Web Developer projects",
-      "subheadline": "I was working on"
+      "subheadline": "I was working on",
+      "jungleSwap": {
+        "name": "JUNGLESWAP",
+        "description": "Share your plant offshoots and make money or swap them for another plant. Shop and give a plant a new home."
+      },
+      "trackerTools": {
+        "name": "TRACKERTOOLS",
+        "description": "Four powerful tools to make working with the music editor Protracker and its modules more comfortable."
+      },
+      "letterShooter": {
+        "name": "LETTER SHOOTER",
+        "description": "A coordination and strategy game with the goal to hit the missing letters with precise shots."
+      }
     },
     "techStack": {
       "headline": "The tech stack",
