--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -50,7 +50,7 @@
       }
     },
     "projects": {
-      "headline": "Meine Projekte als Webentwickler",
+      "headline": "Meine Projekte",
       "subheadline": "an denen ich arbeite",
       "jungleSwap": {
         "name": "JUNGLESWAP",
