--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -50,7 +50,7 @@
       }
     },
     "projects": {
-      "headline": "My Web Developer projects",
+      "headline": "My projects",
       "subheadline": "I was working on",
       "jungleSwap": {
         "name": "JUNGLESWAP",
