--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -5,7 +5,7 @@
     "techStack": "TECHSTACK",
     "resume": "LEBENSLAUF",
     "contact": "KONTAKT",
-    "startApp": "VERSUCH ES!",
+    "startApp": "ZUR APP",
     "gitHubClient": "GIT HUB",
     "gitHubServer": "GIT HUB 2",
     "getBack": "ZURÜCK"
