cypress test menu + language select imroved

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -18,6 +18,7 @@
 
   "select": {
     "language": {
+      "placeholder": "SPRACHE",
       "english": "ENGLISCH",
       "german": "DEUTSCH"
     }
