--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,6 +18,7 @@
 
   "select": {
     "language": {
+      "placeholder": "LANGUAGE",
       "english": "ENGLISH",
       "german": "GERMAN"
     }
