ProjectDetails layout changed

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -54,11 +54,11 @@
       "headline": "Meine Projekte",
       "subheadline": "an denen ich arbeite",
       "jungleSwap": {
-        "name": "JUNGLESWAP",
+        "name": "JungleSwap",
         "description": "Teile deine Pflanzenableger und verdiene damit Geld oder tausche sie gegen eine andere Pflanze. Kaufe eine Pflanze und gib ihr ein neues Zuhause."
       },
       "trackerTools": {
-        "name": "TRACKERTOOLS",
+        "name": "Trackertools",
         "description": "Vier leistungsstarke Tools, die das Arbeiten mit dem Musikeditor Protracker und seinen Modulen komfortabler machen."
       },
       "letterShooter": {
