--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -54,11 +54,11 @@
       "headline": "My projects",
       "subheadline": "I was working on",
       "jungleSwap": {
-        "name": "JUNGLESWAP",
+        "name": "JungleSwap",
         "description": "Share your plant offshoots and make money or swap them for another plant. Shop and give a plant a new home."
       },
       "trackerTools": {
-        "name": "TRACKERTOOLS",
+        "name": "Trackertools",
         "description": "Four powerful tools to make working with the music editor Protracker and its modules more comfortable."
       },
       "letterShooter": {
