--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,7 +7,7 @@
     "contact": "CONTACT",
     "startApp": "TRY IT",
     "gitHubClient": "GIT HUB",
-    "gitHubServer": "GIT HUB 2",
+    "gitHubServer": "GIT HUB",
     "getBack": "GET BACK"
   },
 
