git hub buttons changed

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -7,7 +7,7 @@
     "contact": "KONTAKT",
     "startApp": "ZUR APP",
     "gitHubClient": "GIT HUB",
-    "gitHubServer": "GIT HUB 2",
+    "gitHubServer": "GIT HUB+",
     "getBack": "ZURÜCK"
   },
 
