--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,9 +5,7 @@
     "techStack": "TECHSTACK",
     "resume": "RESUME",
     "contact": "CONTACT",
-    "startApp": "TRY IT",
-    "gitHubClient": "GIT HUB",
-    "gitHubServer": "GIT HUB+",
+    "gitHub": "GIT HUB",
     "getBack": "GET BACK"
   },
 
