--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -5,9 +5,7 @@
     "techStack": "TECHSTACK",
     "resume": "LEBENSLAUF",
     "contact": "KONTAKT",
-    "startApp": "ZUR APP",
-    "gitHubClient": "GIT HUB",
-    "gitHubServer": "GIT HUB+",
+    "gitHub": "GIT HUB",
     "getBack": "ZURÜCK"
   },
 
