ProjectDetails mobile view improved

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -61,7 +61,7 @@
       },
       "trackerTools": {
         "name": "Trackertools",
-        "description": "Vier leistungsstarke Tools für das Arbeiten mit Modulen des Musikeditors Protracker."
+        "description": "Vier Tools für das Arbeiten mit Modulen des Musikeditors Protracker."
       }
     },
     "techStack": {
