--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -61,7 +61,7 @@
       },
       "trackerTools": {
         "name": "Trackertools",
-        "description": "Four powerful tools for working with Protracker music editor modules."
+        "description": "Four tools for working with Protracker music editor modules."
       }
     },
     "techStack": {
