experience text updated

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -43,7 +43,7 @@
         "headline": "Wie alles begann",
         "paragraph1": "Ich habe angefangen, die Grundlagen der Webentwicklung selbst und als Full-Stack-Webentwickler bei Ironhack zu lernen.",
         "paragraph2": "Ich habe meine Fähigkeiten zum Schreiben von Clean Code verbessert und in mehreren Udemy-Kursen gelernt, das Redux Toolkit und TypeScript zusammen mit React in meinen Projekten anzuwenden.",
-        "paragraph3": "Mittlerweile bin ich als Azubi-Entwickler mehr in agiles Arbeiten eingetaucht und habe gelernt, Vue zusammen mit Vuex zu nutzen und End-2-End-Tests für Cypress geschrieben.",
+        "paragraph3": "Mittlerweile habe ich mich als Trainee-Entwickler mehr mit agiler Arbeit beschäftigt und mich auf Typescript, NextJS und React konzentriert.",
         "paragraph4": "Ich möchte Teil eines Teams werden, in dem ich meine Fähigkeiten anwenden, weiterentwickeln und teilen kann.",
         "contact": "Lass uns Kontakt aufnehmen"
       }
