--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -43,7 +43,7 @@
         "headline": "How it began",
         "paragraph1": "I started to learn the fundamentals of Web Development by myself and as a Full Stack Web Developper at Ironhack.",
         "paragraph2": "I improved my skills to write Clean Code and learned in several Udemy courses to apply the Redux Toolkit and TypeScript together with React in my projects.",
-        "paragraph3": "Meanwhile I dived more into agile work as a trainee developer and learned to use Vue together with Vuex and wrote end-2-end tests for Cypress.",
+        "paragraph3": "Meanwhile I dived more into agile work as a trainee developer and focused on Typescript, NextJS and React.",
         "paragraph4": "I would like to become part of a team where I can apply, develop and share my skills.",
         "contact": "Let's get in touch."
       }
